--- a/trurail-simulations/bnsf-sd70ace.html
+++ b/trurail-simulations/bnsf-sd70ace.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Repaint of GE's U36B into Conrail blue.">
+    <meta name="description" content="Repaint of EMD's SD70ACe in BNSF 'Heritage 3' Livery.">
     <meta name="keywords" content="train simulator, mods, archive, truRail, clearTracks, UTS creations, east coast simulations">
-    <title>Amtrak F40PH EP - Train Simulator Mod Archive</title>
+    <title>BNSF SD70ACe - Train Simulator Mod Archive</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="https://files.trainsimarchive.org/media/tsma-logo.png" as="image">
@@ -33,7 +33,7 @@
                             Archive
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="archiveDropdown">
-                            <li><a class="dropdown-item" href="../trurail-simulations.html">UTS Creations</a></li>
+                            <li><a class="dropdown-item" href="../trurail-simulations.html">TruRail Simulations</a></li>
                             <li><a class="dropdown-item" href="#">ClearTracks</a></li>
                             <li><a class="dropdown-item" href="#">UTS Creations</a></li>
                             <li><a class="dropdown-item" href="#">East Coast Simulations</a></li>
@@ -41,6 +41,7 @@
                         </ul>
                     </li>
                 </ul>
+                
                 <div class="d-flex align-items-center ms-auto">
                     <input type="text" placeholder="Search..." class="search-input desktop-search" id="searchInput">
                 </div>
@@ -58,7 +59,7 @@
             <a href="../index.html" class="mobile-nav-link">Home</a>
             <a href="../contributors.html" class="mobile-nav-link">Contributors</a>
             <div class="mobile-nav-divider">Archive</div>
-            <a href="../trurail-simulations.html" class="mobile-nav-link mobile-nav-sublink">UTS Creations</a>
+            <a href="../trurail-simulations.html" class="mobile-nav-link mobile-nav-sublink">TruRail Simulations</a>
             <a href="#" class="mobile-nav-link mobile-nav-sublink">ClearTracks</a>
             <a href="#" class="mobile-nav-link mobile-nav-sublink">UTS Creations</a>
             <a href="#" class="mobile-nav-link mobile-nav-sublink">East Coast Simulations</a>
@@ -69,18 +70,18 @@
         <div class="mod-exconrail-section">
             <div class="text-gray-400 mb-2">
                 <a href="../index.html" class="hover:underline">Home</a> >
-                <a href="../trurail-simulations.html" class="hover:underline">UTS Creations</a> >
-                <span>Amtrak F40PH EP</span>
+                <a href="../trurail-simulations.html" class="hover:underline">TruRail Simulations</a> >
+                <span>Burlington Northern Santa Fe SD70ACe</span>
             </div>
             <div class="flex justify-between items-start mb-2">
                 <div>
-                    <h1 class="text-2xl font-bold">Amtrak F40PH EP</h1>
-                    <p class="text-gray-400">By <a href="../trurail-simulations.html" class="hover:underline">UTS Creations</a></p>
+                    <h1 class="text-2xl font-bold">Burlington Northern Santa Fe SD70ACe</h1>
+                    <p class="text-gray-400">By <a href="../trurail-simulations.html" class="hover:underline">TruRail Simulations</a></p>
                 </div>
                 <a href="#" 
                    class="mod-exconrail-download-button download-trigger" 
-                   data-url="https://files.trainsimarchive.org/UTS%20-%20Amtrak%20F40PH%20EP.7z"
-                   data-name="UTS - Amtrak F40PH EP.7z">
+                   data-url="https://files.trainsimarchive.org/TRS%20-%20CR_U36B.rar"
+                   data-name="TRS - CR_U36B.rar">
                     Download
                 </a>
             </div>
@@ -88,7 +89,7 @@
                 <div>
                     <div class="mod-gallery">
                         <div class="mod-gallery-main">
-                            <img id="mainDisplayImage" src="https://files.trainsimarchive.org/media/amtrakf40ep.png" alt="Amtrak F40PH EP">
+                            <img id="mainDisplayImage" src="https://files.trainsimarchive.org/media/14a601_4df02ac3b4e64ab8a8bdab8ebc46aef3~mv2.jpg" alt="Conrail U36B">
                             <div class="gallery-controls">
                                 <button class="gallery-nav-btn gallery-nav-prev" onclick="event.stopPropagation(); manualNavigateGallery(-1)" aria-label="Previous">
                                     <i class="fas fa-chevron-left"></i>
@@ -102,7 +103,25 @@
                         </div>
                         <div class="mod-gallery-thumbs">
                             <div class="gallery-thumb" onclick="openLightbox(0)" data-index="0">
-                                <img src="https://files.trainsimarchive.org/media/amtrakf40ep.png" alt="Image 1">
+                                <img src="https://files.trainsimarchive.org/media/14a601_4df02ac3b4e64ab8a8bdab8ebc46aef3~mv2.jpg" alt="Image 1">
+                            </div>
+                            <div class="gallery-thumb" onclick="openLightbox(1)" data-index="1">
+                                <img src="https://files.trainsimarchive.org/media/14a601_b9ec1a0dd22349e899e1f8a404bfb286~mv2.jpg" alt="Image 2">
+                            </div>
+                            <div class="gallery-thumb" onclick="openLightbox(2)" data-index="2">
+                                <img src="https://files.trainsimarchive.org/media/14a601_b8440db93cd34d32a0170d593c313b99~mv2.jpg" alt="Image 3">
+                            </div>
+                            <div class="gallery-thumb" onclick="openLightbox(3)" data-index="3">
+                                <img src="https://files.trainsimarchive.org/media/14a601_7559e0d011b844f1ac9d5015ad68ffee~mv2.jpg" alt="Image 4">
+                            </div>
+                            <div class="gallery-thumb" onclick="openLightbox(4)" data-index="4">
+                                <img src="https://files.trainsimarchive.org/media/14a601_07736a8e71424ca0a31a5e9102eb1822~mv2.jpg" alt="Image 5">
+                            </div>
+                            <div class="gallery-thumb" onclick="openLightbox(5)" data-index="5">
+                                <img src="https://files.trainsimarchive.org/media/14a601_c19df694f2804aeca007928c280d5c6d~mv2.jpg" alt="Image 6">
+                            </div>
+                            <div class="gallery-thumb" onclick="openLightbox(6)" data-index="6">
+                                <img src="https://files.trainsimarchive.org/media/14a601_ee4cf892cdee44fcb2ea7228d6568185~mv2.jpg" alt="Image 7">
                             </div>
                         </div>
                     </div>
@@ -111,34 +130,35 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        Experience the rebirth of the Amtrak F40PH first-hand with new scripts, flares and much more.
-                    </p>  
+                        This download contains a repaint of EMD's SD70ACe in BNSF "Heritage 3" livery.
+                    </p>
+                    
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
                     <ul class="requirements-list" style="margin-bottom: 1.5rem;">
-                        <li>All-New Sound Set</li>
-                        <li>Cold Start & Isolation Switch</li>
-                        <li>Dynamic Exhaust Effects</li>
-                        <li>HEP Simulation</li>
-                        <li>Improved Physics</li>
-                        <li>Insertable Reverser, Isolation Switch, and PCS</li>
-                        <li>Realistic Headlights</li>
-                    </ul>
+                        <li>Brand new rebaked and upscaled 4K textures</li>
+                        <li>TempSim</li>
+                        <li>New autonumbering</li>
+                        <li>Additional underframe detailing</li>
+                        <li>Accurate BNSF colors</li>
+                        <li>Type-F knuckle coupler (provided by Searchlight Simulations)</li>
+                    </ul>        
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Requirements</h3>
                     <ul class="requirements-list" style="margin-bottom: 1.5rem;">
-                        <li><a href="https://store.steampowered.com/app/208296/Train_Simulator_Amtrak_F40PH_California_Zephyr_Loco_AddOn/" target="_blank">Amtrak F40PH ‘California Zephyr’ Loco Add-On</a></li>
+                        <li><a href="https://store.steampowered.com/app/208365/Train_Simulator_SD70_V2_Volume_2_Loco_AddOn/" target="_blank">SD70 V2 Volume 2 Loco Add-On</a></li>
+                        <li><a href="https://store.searchlight-simulations.com/products/16n-710g3c-ii-ep" target="_blank">Searchlight Simulations EMD 16N-710G3C Enhancement Pack</a></li>
                     </ul>
-                    <div class="file-details-box" data-name="UTS - Amtrak F40PH EP.7z">
+                    <div class="file-details-box" data-name="TRS - CR_U36B.rar">
                         <a href="#" 
                            class="download-trigger" 
-                           data-url="https://files.trainsimarchive.org/UTS%20-%20Amtrak%20F40PH%20EP.7z"
-                           data-name="UTS - Amtrak F40PH EP.7z"
+                           data-url="https://files.trainsimarchive.org/TRS%20-%20CR_U36B.rar"
+                           data-name="TRS - CR_U36B.rar"
                            style="display: block; padding: 1rem; background: #1a1a1a; border: 2px solid #333; border-radius: 8px; text-decoration: none; transition: all 0.2s; cursor: pointer;">
                             <div style="display: flex; align-items: center; gap: 0.75rem;">
                                 <div style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; background: #252525; border-radius: 6px;">
                                     <i class="fas fa-file-archive" style="font-size: 1.25rem; color: #888;"></i>
                                 </div>
                                 <div style="flex: 1;">
-                                    <div style="font-weight: 500; color: #fff; font-size: 0.95rem;">UTS - Amtrak F40PH EP.7z</div>
+                                    <div style="font-weight: 500; color: #fff; font-size: 0.95rem;">TRS - CR_U36B.rar</div>
                                     <div style="display: flex; gap: 1rem; font-size: 0.8rem; color: #888; margin-top: 0.2rem; flex-wrap: wrap;">
                                         <span><i class="fas fa-hdd" style="margin-right: 0.25rem;"></i><span data-file-size>Loading...</span></span>
                                         <span><i class="fas fa-clock" style="margin-right: 0.25rem;"></i><span data-file-uploaded>Loading...</span></span>
