--- a/trurail-simulations.html
+++ b/trurail-simulations.html
@@ -174,11 +174,11 @@
                     </div>
                     
                     <div class="mod-card">
-                        <a href="#" class="mod-card-link">
+                        <a href="trurail-simulations/bnsf-sd70ace.html" class="mod-card-link">
                             <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/placeholder.jpg');"></div>
                         </a>
                         <div class="mod-card-content">
-                            <a href="#" class="mod-card-link">
+                            <a href="trurail-simulations/bnsf-sd70ace.html" class="mod-card-link">
                                 <h3 class="mod-card-title">BNSF SD70ACe</h3>
                             </a>
                             <p class="mod-card-description">New version of EMD's SD70ACe in BNSF 'Heritage 3' Livery.</p>
