--- a/uts-creations/amtrakf40-ep.html
+++ b/uts-creations/amtrakf40-ep.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Repaint of GE's U36B into Conrail blue.">
+    <meta name="description" content="Experience the rebirth of the Amtrak F40PH first-hand with new scripts, flares and much more.">
     <meta name="keywords" content="train simulator, mods, archive, truRail, clearTracks, UTS creations, east coast simulations">
     <title>Amtrak F40PH EP - Train Simulator Mod Archive</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
