--- a/trurail-simulations/metra-f59phi-pack.html
+++ b/trurail-simulations/metra-f59phi-pack.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This download TESSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSins a repaint of EMD's F59PHI into Metra's Ex-Amtrak Surfliner paint scheme.">
+    <meta name="description" content="A repaint of EMD's F59PHI into Metra's Ex-Amtrak Surfliner paint scheme.">
     <meta name="keywords" content="train simulator, mods, archive, truRail, clearTracks, UTS creations, east coast simulations">
     <title>Metra F59PHI Pack - Train Simulator Mod Archive</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -127,12 +127,12 @@
                             </div>
                         </div>
                     </div>
-                    <p class="page-updated">Page Updated: 11/27/25</p>
+                    <p class="page-updated">Page Updated: 11/31/25</p>
                 </div>
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download TESSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSins a repaint of EMD's F59PHI into Metra's Ex-Amtrak Surfliner paint scheme.
+                        This download contains a repaint of EMD's F59PHI into Metra's Ex-Amtrak Surfliner paint scheme.
                     </p>
                     
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
