--- a/uts-creations/amtrakf40-ep.html
+++ b/uts-creations/amtrakf40-ep.html
@@ -111,7 +111,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        Experience the rebirth of the Amtrak F40PH first-hand with new scripts, flares and much more.
+                        Experience the reeeeeeeeeeeeeeebirth of the Amtrak F40PH first-hand with new scripts, flares and much more.
                     </p>  
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
                     <ul class="requirements-list" style="margin-bottom: 1.5rem;">
