--- a/uts-creations/amtrakf40-ep.html
+++ b/uts-creations/amtrakf40-ep.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Experwwwwwwwwwwwwwience the rebirth of the Amtrak F40PH first-hand with new scripts, flares and much more.">
+    <meta name="description" content="Experience the rebirth of the Amtrak F40PH first-hand with new scripts, flares and much more.">
     <meta name="keywords" content="train simulator, mods, archive, truRail, clearTracks, UTS creations, east coast simulations">
     <title>Amtrak F40PH EP - Train Simulator Mod Archive</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -111,7 +111,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        Experienwwwwwwwwwwwwwwwce the rebirth of the Amtrak F40PH first-hand with new scripts, flares and much more.
+                        Experience the rebirth of the Amtrak F40PH first-hand with new scripts, flares and much more.
                     </p>  
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
                     <ul class="requirements-list" style="margin-bottom: 1.5rem;">
