--- a/privacy.html
+++ b/privacy.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Train Simulator Mod Archive - The largest web archive of delisted and lost Train Simulator Classic content.">
-    <meta name="keywords" content="train simulator, mods, archive, truRail, clearTracks, UTS creations, east coast simulations">
-    <title>Terms Of Use - Train Simulator Mod Archive</title>
+    <meta name="description" content="Privacy Policy - Train Simulator Mod Archive. Learn how we protect and handle your personal information.">
+    <meta name="keywords" content="privacy policy, train simulator mod archive, data protection, personal information">
+    <title>Privacy Policy - Train Simulator Mod Archive</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="https://files.trainsimarchive.org/media/tsma-logo.png" as="image">
@@ -69,59 +69,68 @@
     <div class="privacy-main">
         <div class="privacy-container">
             <section class="sidebar-section">
-                <h1>Terms of Use</h1>
+                <h1>Privacy Policy</h1>
                 
                 <div class="space-y-6">
                     <div>
-                        <h2>Content Permission and Copyright</h2>
-                        <p>All content on this website is hosted with the permission of its original creators. We take copyright seriously and respect the intellectual property rights of all content creators.</p>
-                        <p><strong>Reposting, redistributing, or uploading any files from this site to other websites is strictly prohibited without the express consent of the original authors.</strong></p>
+                        <h2>Introduction</h2>
+                        <p>Welcome to the Train Simulator Mod Archive ("we," "our," or "us"). We are committed to protecting your privacy and ensuring transparency about how we collect, use, and protect your personal information.</p>
+                        <p><strong>This Privacy Policy explains our practices regarding data collection and use when you visit our website at trainsimarchive.org.</strong></p>
                     </div>
 
                     <div>
-                        <h2>Content Disclaimer</h2>
-                        <p>All archived content is provided as-is, with no guarantees or support available for problems you may face. The Train Simulator Mod Archive is not responsible for any issues that may arise from the use of archived content.</p>
-                        <p>We make no warranties, expressed or implied, regarding the functionality, compatibility, or safety of any archived files.</p>
+                        <h2>Information We Collect</h2>
+                        <p><strong>Archive Statistics:</strong> We collect page view counts for HTML pages visited and track the number of times content is downloaded. This helps us maintain usage statistics for the archive.</p>
+                        <p><strong>Contact Information:</strong> Only when you voluntarily reach out for support, feedback, or submit suggestions.</p>
+                        <p><strong>Technical Data:</strong> Basic browser functionality data needed for the website to operate properly, such as search preferences and navigation.</p>
                     </div>
 
                     <div>
-                        <h2>Submit Content for Archival</h2>
-                        <p>If you have any delisted content that you would like us to archive, please email us at:</p>
-                        <p><strong><a href="mailto:historyforeveryoneproductions1@gmail.com">historyforeveryoneproductions1@gmail.com</a></strong></p>
-                        <p>Please include proof of permission to archive the content. This may include:</p>
+                        <h2>How We Use Your Information</h2>
+                        <p>We use collected information to:</p>
                         <ul class="list-disc pl-6 mb-4">
-                            <li>Documentation showing you are the original creator</li>
-                            <li>Written permission from the original creator</li>
-                            <li>Evidence that the content has been officially delisted or abandoned</li>
+                            <li>Track view counts for archive pages and download statistics</li>
+                            <li>Maintain usage statistics to understand which content is most accessed</li>
+                            <li>Provide basic website functionality and navigation</li>
+                            <li>Respond to support requests and feedback when contacted</li>
+                            <li>Ensure the archive operates properly and securely</li>
                         </ul>
                     </div>
 
                     <div>
-                        <h2>User Responsibilities</h2>
-                        <p>By using this website, you agree to:</p>
+                        <h2>Information Sharing and Disclosure</h2>
+                        <p>We do not sell, trade, or rent your personal information. We may share information with:</p>
                         <ul class="list-disc pl-6 mb-4">
-                            <li>Respect the intellectual property rights of content creators</li>
-                            <li>Not redistribute content without proper authorization</li>
-                            <li>Use archived content in accordance with any licenses provided by the original creators</li>
-                            <li>Report any copyright concerns to us immediately</li>
+                            <li><strong>Service Providers:</strong> Cloudflare (CDN, security), GitHub (version control)</li>
+                            <li><strong>Legal Requirements:</strong> When required by law or to protect rights and safety</li>
                         </ul>
                     </div>
 
                     <div>
-                        <h2>Preservation Mission</h2>
-                        <p>Train Simulator Mod Archive was started in September 2023 with the mission to preserve delisted and lost Train Simulator Classic content. Our goal is to maintain gaming history and ensure that important community creations remain accessible.</p>
-                        <p>We work directly with creators and only archive content with proper permission and authorization.</p>
+                        <h2>Data Security</h2>
+                        <p>We implement security measures including HTTPS/TLS encryption, access controls, secure cloud hosting, and regular security updates.</p>
+                        <p>However, no method of internet transmission is 100% secure. We cannot guarantee absolute security.</p>
                     </div>
 
                     <div>
-                        <h2>Changes to Terms</h2>
-                        <p>We reserve the right to update these terms at any time. Continued use of the website constitutes acceptance of any changes made to these terms.</p>
-                        <p>Last updated: October 24, 2025</p>
+                        <h2>Your Rights and Choices</h2>
+                        <p>Since we collect minimal data (primarily view counts and download statistics), there is very limited personal information to manage. You can configure your browser settings as needed for your privacy preferences.</p>
                     </div>
 
                     <div>
-                        <h2>Contact Us</h2>
-                        <p>If you have any questions about these terms, please contact us at <a href="mailto:historyforeveryoneproductions1@gmail.com">historyforeveryoneproductions1@gmail.com</a></p>
+                        <h2>Data Retention</h2>
+                        <p>We retain information as necessary to provide services, comply with legal obligations, and improve user experience. We regularly review and delete unnecessary data.</p>
+                    </div>
+
+                    <div>
+                        <h2>Changes to This Privacy Policy</h2>
+                        <p>We may update this Privacy Policy from time to time. When we make changes, we will update the "Last Updated" date. Your continued use of our website after changes constitutes acceptance of the updated policy.</p>
+                        <p>Effective Date: November 27, 2025 | Last Updated: November 27, 2025</p>
+                    </div>
+
+                    <div>
+                        <h2>Contact Information</h2>
+                        <p>If you have questions, concerns, or requests regarding this Privacy Policy or our data practices, please contact us at <a href="mailto:historyforeveryoneproductions1@gmail.com">historyforeveryoneproductions1@gmail.com</a>.</p>
                     </div>
                 </div>
             </section>
