--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="archiveDropdown">
                             <li><a class="dropdown-item" href="trurail-simulations.html">TruRail Simulations</a></li>
-                            <li><a class="dropdown-item" href="#">ClearTracks</a></li>
-                            <li><a class="dropdown-item" href="#">UTS Creations</a></li>
-                            <li><a class="dropdown-item" href="#">East Coast Simulations</a></li>
-                            <li><a class="dropdown-item" href="#">Virtual Rail Creations</a></li>
+                            <li><a class="dropdown-item" href="cleartracks.html">ClearTracks</a></li>
+                            <li><a class="dropdown-item" href="uts-creations.html">UTS Creations</a></li>
+                            <li><a class="dropdown-item" href="east-coast-simulations.html">East Coast Simulations</a></li>
+                            <li><a class="dropdown-item" href="virtual-rail-creations.html">Virtual Rail Creations</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -96,11 +96,11 @@
                         </div>
                         <ul id="trurail" class="hidden pl-5 space-y-2">
                             <li><a href="trurail-simulations.html#bundles" class="category-link">Bundles</a></li>
-                            <li><a href="#" class="category-link">Enhancement Packs</a></li>
-                            <li><a href="#" class="category-link">Horns / Whistles</a></li>
-                            <li><a href="#" class="category-link">Patches</a></li>
+                            <li><a href="trurail-simulations.html#enhancement-packs" class="category-link">Enhancement Packs</a></li>
+                            <li><a href="trurail-simulations.html#horns-whistles" class="category-link">Horns / Whistles</a></li>
+                            <li><a href="trurail-simulations.html#patches" class="category-link">Patches</a></li>
                             <li><a href="trurail-simulations.html#reskins" class="category-link">Reskins</a></li>
-                            <li><a href="#" class="category-link">Rolling Stock</a></li>
+                            <li><a href="trurail-simulations.html#rolling-stock" class="category-link">Rolling Stock</a></li>
                         </ul>
                     </li>
                     
